fixed small issues on mobile devices with the border radius and applied white colors on blue bg on navs

--- a/mycss.css
+++ b/mycss.css
@@ -46,6 +46,7 @@ a{
 }
 a:hover{
     background-color: #2196f3;
+    color:#ffffff !important;
     
 }
 
@@ -55,6 +56,7 @@ a:hover{
     }
     .nav-link{
         padding:0rem 1rem !important;
+        border-radius:0;
     }
     .btn-link{
         white-space: normal !important;
